# skynet-rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/core/: agent.rs  message.rs  mod.rs
src/providers/: anthropic.rs  mod.rs  trait.rs
src/skynet/: mod.rs  pulse.rs
