[package]
name = "skynet-rust"
version = "0.1.0"
edition = "2021"
authors = ["Black Eagle Project"]
description = "SKYNET - Ultra-lightweight AI agent framework in Rust"
license = "MIT"
repository = "https://github.com/dlhiwig/skynet-rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true